--- a/Ansible/host/Dockerfile
+++ b/Ansible/host/Dockerfile
@@ -8,13 +8,8 @@ RUN apt-get install --no-install-recommends -y software-properties-common && \
     apt-get install -y ansible
 
 RUN echo '[local]\nlocalhost\n' > /etc/ansible/hosts
+RUN echo '[remote]\nremote-server\n' >> /etc/ansible/hosts
 
-RUN useradd -m ansible
+RUN mkdir /playbooks
 
-WORKDIR /home/ansible
-RUN mkdir /home/ansible/.ssh
-RUN chown ansible:ansible .ssh
-
-VOLUME /home/ansible/.ssh
-
-USER ansible
+VOLUME /playbooks
